[NO-ISSUE] Fix alignment of location section

--- a/_sass/contact/_location.scss
+++ b/_sass/contact/_location.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  max-width: 1440px;
+
   .center-container {
     display: flex;
     max-width: 1140px;
@@ -22,6 +22,7 @@
         background-image: url(../../assets/images/brickmakers-hq@3x.jpg);
         background-size: contain;
         background-repeat: no-repeat;
+        background-position: right;
         width: 100%;
         height: 100%;
         max-height: 470px;
